# prompt-optimization

./: .env.example  .gitignore  IMPLEMENTATION_COMPARISON.md  README.md  README_SARINA_RLOO.md  README_experimental.md  README_xstest.md  RUN_ON_GPU_SERVER.md  STAT_4830_Paper.tex  Stat4830_project.ipynb  baseline.py  colab_experiment.ipynb  demo.ipynb  final_paper.tex  gepa_qwen_harmbench_run.ipynb  getting_started.md  literature_review.md  llama2_baseline_results.csv  make_repo.sh  pyproject.toml  report.md  requirements.txt  results.csv  run_experiment.py  run_trials.py  run_trials_gpu.py  run_trials_remote.sh  setup_env.sh  week-11-adversary-experiments.md
.claude/: settings.local.json
configs/: adversary_baseline_test.yaml  adversary_llama31_eval.yaml  adversary_rloo_length_penalty.yaml  coev_r14_rloo_length_penalty.yaml  default.yaml  pair_llama2_comparison.yaml  pair_vicuna13b_comparison.yaml  prompt_reference.yaml  r11_full_prompt.yaml  r11_full_prompt_best.yaml  r11_full_prompt_seed123.yaml  r11_rloo_length_penalty.yaml  r11_seed123_xstest.yaml  r11_xstest_eval.yaml  r12_full_prompt_kl.yaml  r12_full_prompt_kl_xstest.yaml  r12_rloo_kl_penalty.yaml  r12_xstest_eval.yaml  r14_coev_full_prompt.yaml  r14_coev_full_prompt_kl.yaml  r14_coev_full_prompt_kl_xstest.yaml  r14_coev_full_prompt_kl_xstest_gepa_defense.yaml  r14_coev_full_prompt_xstest.yaml  r14_coev_harmbench_eval.yaml  r14_coev_kl_harmbench_eval.yaml  r14_coev_rloo.yaml  r14_xstest_eval.yaml  r15_baseline.yaml  r15_xstest_eval.yaml  smoke.yaml  smoke_eval.yaml  xstest_batch_eval.yaml  xstest_gepa_defense_target_only.yaml
data/: harmbench_behaviors.csv  jailbreak_10.csv  jailbreak_100.json
docs/: artifacts-by-run.md  experiment_results_summary.md  final_paper.md  gcg_baseline.md  getting-started.md  pair_baseline.md  paper_draft_v1.docx  plan-openai-target-same-as-reflection.md  project_deliverables.docx  r12_kl_penalty_implementation_notes.md  r13_diversity_bonus_implementation_notes.md  run_on_prime_guide.md
experimental_code/: copy_of_basic_implementation_without_gepa_4.py  run_coev.py  smoke_test_gepa.csv  smoke_test_reinforce.csv
experimental_code_2/: launch_mark_exp_prime.sh  mark_exp.md  mark_exp.py
legacy2/: loop.py
legacy_code/: Copy_of_basic_implementation_without_gepa (4).ipynb  GEPA_baselines.ipynb  colab_experiment.ipynb  gepa-test.py  single_step_test.py
notebooks/: coev_v2_colab_safe_demo.ipynb  experiment_matrix.ipynb  experiment_matrix.py  main.ipynb  main.py
(+344 files in other folders)
