[project]
name = "stat4830project-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiv Lele", email = "shivlele2005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "dspy-ai>=3.1.3",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "unsloth>=2026.2.1",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
